add system health view to dashboard
